# codex-log-analysis

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: napkin.md
docs/: export-nice-to-have.md  export-sample.md  markdown-note-export-followup.md  retrospective-data-structure.md
scripts/: generate_demo_snapshots.py  generate_readme_demo.py  sanitize_demo_data.py
src/codex_log_analysis/: analysis.py  cli.py  web.py
src/codex_log_export/: __init__.py  cli.py  exporter.py
tests/fixtures/export/: basic_session.json  basic_session.jsonl
